# gsd-status-ui

./: ._target  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
Formula/: gsd-status.rb  gsd-status.rb.tmpl
docs/: PLAN-document-review-tabs.md
leaf-adapter/: Cargo.toml
leaf-adapter/src/: lib.rs
leaf-adapter/tests/: doc_view.rs
sample/: README.md
sample/.planning/: PROJECT.md  ROADMAP.md  STATE.md
sample/.planning/debug/: kiosk-crashes-on-empty-cart.md  knowledge-base.md
sample/.planning/debug/resolved/: receipt-printer-timeout.md
sample/.planning/ideas/: latte-art-mode.md
sample/.planning/intel/: constraints.md  context.md  decisions.md
sample/.planning/notes/: 2026-07-08-grinder-timing.md  2026-07-09-milk-frother.md
sample/.planning/phases/01-navigation-skeleton/: 01-01-PLAN.md  01-01-SUMMARY.md  01-VERIFICATION.md
sample/.planning/phases/02-coffee-acquisition/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md
sample/.planning/quick/260708-cc3-tidy-readme/: 260708-cc3-PLAN.md
sample/.planning/quick/260709-aa1-add-dark-mode-toggle/: 260709-aa1-CONTEXT.md  260709-aa1-PLAN.md
sample/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
sample/.planning/seeds/: SEED-001-mobile-ordering.md
src/: ._main.rs  color.rs  main.rs  model.rs  planning.rs  report.rs
src/tui/: ansi.rs  app.rs  clipboard.rs  mod.rs
tests/: cli.rs
(+7 files in other folders)
