[workspace]
members = ["leaf-adapter"]
# vendor/leaf keeps its own workspace/lockfile; consumed via path dependency.
exclude = ["vendor/leaf"]

[package]
name = "gsd-status-ui"
version = "0.1.0"
edition = "2021"
description = "Terminal status view for a GSD planning workspace"

[[bin]]
name = "gsd-status"
path = "src/main.rs"

[dependencies]
leaf-adapter = { path = "leaf-adapter" }
ratatui = "0.30"
crossterm = "0.29"

[profile.release]
lto = true
strip = true
